# php7.4.26-internalog

./: README.md  configure.ac  sample.php
Zend/: zend_execute.c  zend_signal.c
ext/pcntl/: pcntl.c
ext/pcre/: php_pcre.c
ext/standard/: assert.c  exec.c  file.c  info.c  proc_open.c
internalog/: internalog.conf
log-ingester/: .gitignore  main.py  pyproject.toml  udp-ingester.py
main/: SAPI.c  ilog_config.c  ilog_config.h  ilog_thread.c  ilog_thread.h  ilog_udpclient.c  ilog_udpclient.h  internalog.c  internalog.h  json-builder.c  json.h  php.h
samples/: include.php  index.php  system-id.php
