[tool.poetry]
name = "log-ingester"
version = "0.1.0"
description = "Simple backend to ingest all logs"
authors = ["TheLaluka <loukajc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipdb = "^0.13.9"
rich = "^11.0.0"
fastapi = "^0.72.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
black = "^21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
